--- a/styles.css
+++ b/styles.css
@@ -40,12 +40,11 @@ h1 {
   text-decoration: none;
 }
 button {
-  /* background-color: #4caf50; */
   border: none;
   border-radius: 4px;
   color: #333;
   cursor: pointer;
-  font-size: 1rem;
+  font-size: 1.5rem;
   margin-top: 1rem;
   padding: 0.5rem 1rem;
   text-align: center;
@@ -83,7 +82,10 @@ button {
 
 .score {
   margin-top: 2rem;
+  padding: 1.5rem;
   width: 800px;
-  color: red;
+  color:whitesmoke;
+  background-color: #333;
   font-size: 2rem;
+  border-radius: 4px;
 }
